Updates for PHYS3070

--- a/CourseContent/Notebooks/Lavavu/DataResize.ipynb
+++ b/CourseContent/Notebooks/Lavavu/DataResize.ipynb
@@ -15,6 +15,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -86,6 +93,19 @@
     "Note that the imageio does not actually read the data from disk here but creates a way to access the image.\n",
     "We can then view a subsample of the image data \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## This works too:\n",
+    "# PIL.Image.MAX_IMAGE_PIXELS = 233312401 + 1\n",
+    "# img = PIL.Image.open(\"etopo1_grayscale_hillshade_no_compr.tiff\" )\n",
+    "# img2 = img.resize((7200,3600))\n",
+    "# img2.save(\"etopo1_grayscale_hillshade_small.tif\")"
    ]
   },
   {
