--- a/CourseContent/Notebooks/Lavavu/PlanetViewer.ipynb
+++ b/CourseContent/Notebooks/Lavavu/PlanetViewer.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "ximport numpy as np\n",
+    "import numpy as np\n",
     "import imageio\n",
     "from cloudstor import cloudstor\n",
     "import stripy, lavavu\n",
@@ -17,13 +17,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "res_lon = 1800\n",
     "res_lat = 900\n",
     "mesh = stripy.hybrid_st_meshes.warped_xy_mesh_sphere(res_lon=res_lon, res_lat=res_lat)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cloudstore connection established\n",
+      "Cloudstore connection established\n"
+     ]
+    }
+   ],
+   "source": [
+    "teaching_data = cloudstor(url=\"L93TxcmtLQzcfbk\", password='')\n",
+    "glucifer_tex_maps = cloudstor(url=\"WRG3gSEpY3j9GEW\", password='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['MarsTopo3600x1800.tif', 'Mars_MGS_MOLA_DEM_mosaic_global_463m.tif']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "teaching_data.list(\"Mars\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "glucifer_tex_maps.download('VenusTopographyMap2000x1000.tif', 'VenusTopographyMap2000x1000.tif')\n",
+    "glucifer_tex_maps.download('VenusRadarBrightness_4096x2048.tif', 'VenusRadarBrightness_4096x2048.tif')\n",
+    "teaching_data.download('Venus/VenusTopo3600x1800.tif', 'VenusTopo3600x1800.tif')\n",
+    "teaching_data.download('Mars/MarsTopo3600x1800.tif', 'MarsTopo3600x1800.tif')\n",
+    "teaching_data.download('Moon/MoonTopo3600x1800.tif', 'MoonTopo3600x1800.tif')\n",
+    "\n",
+    "                                            "
    ]
   },
   {
@@ -35,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1547,7 @@
      "data": {
       "text/html": [
        "<script type=\"text/javascript\">\n",
-       "function init(viewerid) {_wi[viewerid] = new WindowInteractor(viewerid, 12303277048, 8136);\n",
+       "function init(viewerid) {_wi[viewerid] = new WindowInteractor(viewerid, 4549081752, 8111);\n",
        "_wi[viewerid].actions = {\n",
        "};\n",
        "}\n",
@@ -1501,21 +1555,21 @@
        "<form novalidate><div style=\"padding:0px; margin: 0px; position: relative;\" class=\"lvctrl\">\n",
        "</div>\n",
        "<div style=\"min-height: 50px; min-width: 50px; position: relative; display: inline-block; float: left; margin-right: 10px;\">\n",
-       "<img id=\"imgtarget_FGD0a8Fm5B\" draggable=false style=\"margin: 0px; border: 1px solid #aaa; display: inline-block;\" src=\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAQAAAAAYLlVAAAAPUlEQVR42u3OMQEAAAgDINe/iSU1xh5IQPamKgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgLtwAMBsGqBDct9xQAAAABJRU5ErkJggg==\">\n",
+       "<img id=\"imgtarget_aBZxOWpnph\" draggable=false style=\"margin: 0px; border: 1px solid #aaa; display: inline-block;\" src=\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAQAAAAAYLlVAAAAPUlEQVR42u3OMQEAAAgDINe/iSU1xh5IQPamKgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgLtwAMBsGqBDct9xQAAAABJRU5ErkJggg==\">\n",
        "\n",
        "           <div style=\"display: none; z-index: 200; position: absolute; top: 5px; right: 5px;\">\n",
-       "             <select onchange=\"_wi['FGD0a8Fm5B'].box.mode = this.value;\">\n",
+       "             <select onchange=\"_wi['aBZxOWpnph'].box.mode = this.value;\">\n",
        "               <option>Rotate</option>\n",
        "               <option>Translate</option>\n",
        "               <option>Zoom</option>\n",
        "             </select>\n",
-       "             <input type=\"button\" value=\"Reset\" onclick=\"_wi['FGD0a8Fm5B'].execute('reset');\">\n",
+       "             <input type=\"button\" value=\"Reset\" onclick=\"_wi['aBZxOWpnph'].execute('reset');\">\n",
        "           </div></div>\n",
        "<div style=\"\" class=\"lvctrl\">\n",
        "<div style=\"padding:0px; margin: 0px; position: relative;\" class=\"lvctrl\">\n",
        "</div>\n",
        "</div>\n",
-       "</form><!-- CREATION TIMESTAMP 20190917203501 --><script>init('FGD0a8Fm5B');</script>"
+       "</form><!-- CREATION TIMESTAMP 20190918183341 --><script>init('aBZxOWpnph');</script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1567,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -3025,7 +3079,7 @@
      "data": {
       "text/html": [
        "<script type=\"text/javascript\">\n",
-       "function init(viewerid) {_wi[viewerid] = new WindowInteractor(viewerid, 12725930648, 8139);\n",
+       "function init(viewerid) {_wi[viewerid] = new WindowInteractor(viewerid, 4798156032, 8112);\n",
        "_wi[viewerid].actions = {\n",
        "};\n",
        "}\n",
@@ -3033,21 +3087,21 @@
        "<form novalidate><div style=\"padding:0px; margin: 0px; position: relative;\" class=\"lvctrl\">\n",
        "</div>\n",
        "<div style=\"min-height: 50px; min-width: 50px; position: relative; display: inline-block; float: left; margin-right: 10px;\">\n",
-       "<img id=\"imgtarget_UrgbdQPlcK\" draggable=false style=\"margin: 0px; border: 1px solid #aaa; display: inline-block;\" src=\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAQAAAAAYLlVAAAAPUlEQVR42u3OMQEAAAgDINe/iSU1xh5IQPamKgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgLtwAMBsGqBDct9xQAAAABJRU5ErkJggg==\">\n",
+       "<img id=\"imgtarget_VPJAkZEqXN\" draggable=false style=\"margin: 0px; border: 1px solid #aaa; display: inline-block;\" src=\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAQAAAAAYLlVAAAAPUlEQVR42u3OMQEAAAgDINe/iSU1xh5IQPamKgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgLtwAMBsGqBDct9xQAAAABJRU5ErkJggg==\">\n",
        "\n",
        "           <div style=\"display: none; z-index: 200; position: absolute; top: 5px; right: 5px;\">\n",
-       "             <select onchange=\"_wi['UrgbdQPlcK'].box.mode = this.value;\">\n",
+       "             <select onchange=\"_wi['VPJAkZEqXN'].box.mode = this.value;\">\n",
        "               <option>Rotate</option>\n",
        "               <option>Translate</option>\n",
        "               <option>Zoom</option>\n",
        "             </select>\n",
-       "             <input type=\"button\" value=\"Reset\" onclick=\"_wi['UrgbdQPlcK'].execute('reset');\">\n",
+       "             <input type=\"button\" value=\"Reset\" onclick=\"_wi['VPJAkZEqXN'].execute('reset');\">\n",
        "           </div></div>\n",
        "<div style=\"\" class=\"lvctrl\">\n",
        "<div style=\"padding:0px; margin: 0px; position: relative;\" class=\"lvctrl\">\n",
        "</div>\n",
        "</div>\n",
-       "</form><!-- CREATION TIMESTAMP 20190917203652 --><script>init('UrgbdQPlcK');</script>"
+       "</form><!-- CREATION TIMESTAMP 20190918183350 --><script>init('VPJAkZEqXN');</script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -3099,7 +3153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -5243,31 +5297,31 @@
      "data": {
       "text/html": [
        "<script type=\"text/javascript\">\n",
-       "function init(viewerid) {_wi[viewerid] = new WindowInteractor(viewerid, 12776038248, 8140);\n",
+       "function init(viewerid) {_wi[viewerid] = new WindowInteractor(viewerid, 5053050464, 8114);\n",
        "_wi[viewerid].actions = {\n",
-       "  \"0eGKNO1PnZ\" : \"<surfacemap>visible=---VAL---; \"};\n",
+       "  \"8WJOvgaCw0\" : \"<surfacemap>visible=---VAL---; \"};\n",
        "}\n",
        "</script>\n",
        "<form novalidate><div style=\"padding:0px; margin: 0px; position: relative;\" class=\"lvctrl\">\n",
        "</div>\n",
        "<div style=\"min-height: 50px; min-width: 50px; position: relative; display: inline-block; float: right;\">\n",
-       "<img id=\"imgtarget_39Pjix8XIU\" draggable=false style=\"margin: 0px; border: 1px solid #aaa; display: inline-block;\" src=\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAQAAAAAYLlVAAAAPUlEQVR42u3OMQEAAAgDINe/iSU1xh5IQPamKgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgLtwAMBsGqBDct9xQAAAABJRU5ErkJggg==\">\n",
+       "<img id=\"imgtarget_VPqJYH4qDC\" draggable=false style=\"margin: 0px; border: 1px solid #aaa; display: inline-block;\" src=\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAQAAAAAYLlVAAAAPUlEQVR42u3OMQEAAAgDINe/iSU1xh5IQPamKgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgLtwAMBsGqBDct9xQAAAABJRU5ErkJggg==\">\n",
        "\n",
        "           <div style=\"display: none; z-index: 200; position: absolute; top: 5px; right: 5px;\">\n",
-       "             <select onchange=\"_wi['39Pjix8XIU'].box.mode = this.value;\">\n",
+       "             <select onchange=\"_wi['VPqJYH4qDC'].box.mode = this.value;\">\n",
        "               <option>Rotate</option>\n",
        "               <option>Translate</option>\n",
        "               <option>Zoom</option>\n",
        "             </select>\n",
-       "             <input type=\"button\" value=\"Reset\" onclick=\"_wi['39Pjix8XIU'].execute('reset');\">\n",
+       "             <input type=\"button\" value=\"Reset\" onclick=\"_wi['VPqJYH4qDC'].execute('reset');\">\n",
        "           </div></div>\n",
        "<div style=\"padding:0px; margin: 0px; position: relative;\" class=\"lvctrl\">\n",
        "<p>Objects:</p>\n",
        "<label>\n",
-       "<input id=\"lvctrl_0eGKNO1PnZ_checkbox\" class=\"lvctrl_0eGKNO1PnZ\" type=\"checkbox\"checked=\"checked\" step=\"any\" data-target=\"surfacemap\" data-property=\"visible\" value=\"True\" onchange=\"; _wi['39Pjix8XIU'].do_action('0eGKNO1PnZ', this.checked ? 1 : 0, this);\" >\n",
+       "<input id=\"lvctrl_8WJOvgaCw0_checkbox\" class=\"lvctrl_8WJOvgaCw0\" type=\"checkbox\"checked=\"checked\" step=\"any\" data-target=\"surfacemap\" data-property=\"visible\" value=\"True\" onchange=\"; _wi['VPqJYH4qDC'].do_action('8WJOvgaCw0', this.checked ? 1 : 0, this);\" >\n",
        " surfacemap</label><br>\n",
        "</div>\n",
-       "</form><!-- CREATION TIMESTAMP 20190918050622 --><script>init('39Pjix8XIU');</script>"
+       "</form><!-- CREATION TIMESTAMP 20190918183551 --><script>init('VPqJYH4qDC');</script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -5283,7 +5337,6 @@
     "height = np.array(PIL.Image.fromarray(topography_data.view()).resize((res_lon,res_lat))).astype(float)\n",
     "hrange = height.max()-height.min()\n",
     "height0 = (height - height.min()) / hrange \n",
-    "\n",
     "\n",
     "XX = mesh.XX\n",
     "YY = mesh.YY\n",
@@ -5313,6 +5366,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(900, 1800, 4)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "height.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -5334,7 +5407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -7478,35 +7551,35 @@
      "data": {
       "text/html": [
        "<script type=\"text/javascript\">\n",
-       "function init(viewerid) {_wi[viewerid] = new WindowInteractor(viewerid, 12787909824, 8143);\n",
+       "function init(viewerid) {_wi[viewerid] = new WindowInteractor(viewerid, 5046653088, 8115);\n",
        "_wi[viewerid].actions = {\n",
-       "  \"d4T6skyG7k\" : \"<surface_height>visible=---VAL---; \",\n",
-       "  \"x4b2wUJJ5q\" : \"<surface_radar>visible=---VAL---; \"};\n",
+       "  \"gPcdVaxGMj\" : \"<surface_height>visible=---VAL---; \",\n",
+       "  \"AXntX4IJsS\" : \"<surface_radar>visible=---VAL---; \"};\n",
        "}\n",
        "</script>\n",
        "<form novalidate><div style=\"padding:0px; margin: 0px; position: relative;\" class=\"lvctrl\">\n",
        "</div>\n",
        "<div style=\"min-height: 50px; min-width: 50px; position: relative; display: inline-block; float: right;\">\n",
-       "<img id=\"imgtarget_ZIe6w60xQs\" draggable=false style=\"margin: 0px; border: 1px solid #aaa; display: inline-block;\" src=\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAQAAAAAYLlVAAAAPUlEQVR42u3OMQEAAAgDINe/iSU1xh5IQPamKgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgLtwAMBsGqBDct9xQAAAABJRU5ErkJggg==\">\n",
+       "<img id=\"imgtarget_yj6epM2ql9\" draggable=false style=\"margin: 0px; border: 1px solid #aaa; display: inline-block;\" src=\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAQAAAAAYLlVAAAAPUlEQVR42u3OMQEAAAgDINe/iSU1xh5IQPamKgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgLtwAMBsGqBDct9xQAAAABJRU5ErkJggg==\">\n",
        "\n",
        "           <div style=\"display: none; z-index: 200; position: absolute; top: 5px; right: 5px;\">\n",
-       "             <select onchange=\"_wi['ZIe6w60xQs'].box.mode = this.value;\">\n",
+       "             <select onchange=\"_wi['yj6epM2ql9'].box.mode = this.value;\">\n",
        "               <option>Rotate</option>\n",
        "               <option>Translate</option>\n",
        "               <option>Zoom</option>\n",
        "             </select>\n",
-       "             <input type=\"button\" value=\"Reset\" onclick=\"_wi['ZIe6w60xQs'].execute('reset');\">\n",
+       "             <input type=\"button\" value=\"Reset\" onclick=\"_wi['yj6epM2ql9'].execute('reset');\">\n",
        "           </div></div>\n",
        "<div style=\"padding:0px; margin: 0px; position: relative;\" class=\"lvctrl\">\n",
        "<p>Objects:</p>\n",
        "<label>\n",
-       "<input id=\"lvctrl_d4T6skyG7k_checkbox\" class=\"lvctrl_d4T6skyG7k\" type=\"checkbox\"checked=\"checked\" step=\"any\" data-target=\"surface_height\" data-property=\"visible\" value=\"True\" onchange=\"; _wi['ZIe6w60xQs'].do_action('d4T6skyG7k', this.checked ? 1 : 0, this);\" >\n",
+       "<input id=\"lvctrl_gPcdVaxGMj_checkbox\" class=\"lvctrl_gPcdVaxGMj\" type=\"checkbox\"checked=\"checked\" step=\"any\" data-target=\"surface_height\" data-property=\"visible\" value=\"True\" onchange=\"; _wi['yj6epM2ql9'].do_action('gPcdVaxGMj', this.checked ? 1 : 0, this);\" >\n",
        " surface_height</label><br>\n",
        "<label>\n",
-       "<input id=\"lvctrl_x4b2wUJJ5q_checkbox\" class=\"lvctrl_x4b2wUJJ5q\" type=\"checkbox\"checked=\"checked\" step=\"any\" data-target=\"surface_radar\" data-property=\"visible\" value=\"True\" onchange=\"; _wi['ZIe6w60xQs'].do_action('x4b2wUJJ5q', this.checked ? 1 : 0, this);\" >\n",
+       "<input id=\"lvctrl_AXntX4IJsS_checkbox\" class=\"lvctrl_AXntX4IJsS\" type=\"checkbox\"checked=\"checked\" step=\"any\" data-target=\"surface_radar\" data-property=\"visible\" value=\"True\" onchange=\"; _wi['yj6epM2ql9'].do_action('AXntX4IJsS', this.checked ? 1 : 0, this);\" >\n",
        " surface_radar</label><br>\n",
        "</div>\n",
-       "</form><!-- CREATION TIMESTAMP 20190918074129 --><script>init('ZIe6w60xQs');</script>"
+       "</form><!-- CREATION TIMESTAMP 20190918183618 --><script>init('yj6epM2ql9');</script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -7560,6 +7633,13 @@
     "lv1.control.ObjectList()                 \n",
     "lv1.control.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
